[Payment Request] State field: allow selecting 1st state.

If the state field is unpopulated, inserts a blank element at the
beginning of the list of states, as the first element is selected by
default when the UIPickerView is shown.

R=mahmadi

Bug: 767972
Change-Id: Iaa0c4bc29b863d8c521f3e9f0b826eb7ccef408d
Reviewed-on: https://chromium-review.googlesource.com/689857
Reviewed-by: Moe Ahmadi <mahmadi@chromium.org>
Commit-Queue: Marc-Antoine Courteau <macourteau@chromium.org>
Cr-Commit-Position: refs/heads/master@{#505070}
Former-commit-id: e4b825b4054e3daf7da61f8bae34035b82f347b9